<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    
    <string name="point">.</string>
    <string name="delete">c</string>
    <string name="clear">clear</string>
    <string name="equality">=</string>
    
 
</resources>
